# MKR

./: .gitignore  README.md  runner.py
.catkin_tools/profiles/default/: devel_collisions.txt
data/: robot_data.csv  robot_start_positions.csv
logs/motion/: build.cmake.000.log.stderr
scripts/: robot_class.py  robot_input.py
src/: area.pgm  area.yaml
src/Kalman/: LICENSE  kf_main.cpp
src/Kalman/gui/: gui.cpp  gui.h
src/Kalman/systemSimulator/: system.h
src/motion/: CMakeLists.txt  setup.py
src/motion-model/: CMakeLists.txt  gui.cc  gui.h  mm_main.cc
src/motion/data/: robot_data.csv  robot_start_positions.csv
src/motion/launch/: start.launch
src/motion/scripts/: a_star.py  coord_helper.py  planner.py  planner_multi.py  robot_class.py  robot_input.py  utils.py
src/particle_filter/: CMakeLists.txt  pf_main (low_variance_sampling).cpp  pf_main.cpp
src/particle_filter/data/: belgioioso-map5b.xcf
src/particle_filter/dataLoader/: CMakeLists.txt
src/particle_filter/gui/: gui.cpp  gui.h
src/particle_filter/laserSimulator/: CMakeLists.txt  lasersimulator.h
src/particle_filter_ros/: CMakeLists.txt
src/particle_filter_ros/include/particle_filter_ros/: laser_simulator.h  matrix_utils.h  particle_filter.h  typedefs.h
src/particle_filter_ros/src/: particle_filter_ros_node.cpp  typedefs.h
src/particle_filter_ros/src/dataLoader/: laserDataLoader.cpp  laserDataLoader.h
src/particle_filter_ros/src/gui/: CMakeLists.txt  gui.cpp  gui.h
src/particle_filter_ros/src/laserSimulator/: lasersimulator.cpp  matrix_utils.h
src/particle_filter_ros/src/particle_filter_ros/: laser_simulator.cpp  particle_filter.cpp
src/robot_coordination/: CMakeLists.txt
src/robot_coordination/launch/: contr.launch
src/robot_coordination/src/: node.cpp
src/simulator_e130/launch/: 0.launch  1.launch  robots.launch
src/simulator_e130/maps/: e129_e130.pgm  e129_e130.yaml
src/student/: CMakeLists.txt  kf_main.cpp
src/student/gui/: CMakeLists.txt
src/student/systemSimulator/: system.cc
